--- a/index.html
+++ b/index.html
@@ -12,17 +12,14 @@
   
   <title>Frontend Mentor | testimonials-grid-section</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-<!--  <style>-->
-<!--    .attribution { font-size: 11px; text-align: center; }-->
-<!--    .attribution a { color: hsl(228, 45%, 44%); }-->
-<!--  </style>-->
 </head>
 <body>
 
   <div class="cards-wrapper">
 
     <div class="card-item" id="item1">
+
+      <div class="bg-img"></div>
 
       <div class="card-item__header-wrapper">
 
@@ -172,8 +169,5 @@
 
   </div>
 
-<!--  <div class="attribution">-->
-<!--    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. -->
-<!--    Coded by <a href="#">Your Name Here</a>.-->
 </body>
 </html>
